envoy/envoy.yaml
#admin:
#  access_log_path: /tmp/admin_access.log
#  address:
#    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  clusters:
    - name: echo_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin

      # Hedera Endpoint Selection

      # If running the Hedera testnet locally
      # hosts: [{ socket_address: { address: localhost, port_value: 50211 }}]

      # If connecting to the official testnet
      # hosts: [{ socket_address: { address: 35.231.208.148, port_value: 50211 }}]
      hosts: [{ socket_address: { address: 13.124.85.3, port_value: 80 } }]

  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: echo_service
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
